--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-4",
+  "name": "next-3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "axios": "^1.3.6",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "mongodb": "^5.3.0",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
