--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "dns": "^0.2.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "mongodb": "^5.3.0",
