--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^5.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0"
   }
 }
